hphp/test/quick/hh_typehint5.php.expectf

Warning: foo() expects exactly 1 parameter, 0 given in %s/test/quick/hh_typehint5.php on line 6

Catchable fatal error: Argument 1 to foo() must be of type ?Bar, undefined variable given in %s/test/quick/hh_typehint5.php on line 6
